Alpha output of movie clip node crashes blender when connected to viewer node with backdrop enabled #43974

Closed
opened 2015-03-12 11:34:24 +01:00 by Olson Burry · 7 comments

System Information
Linux mint 17.1
AMD Phenom II x6 1090t
16GB RAM
GTX 970

Blender Version
Broken: Master / testbuild1 ed5df50
Worked: 2.73a

Short description of error
Connecting alpha output of movie clip node in the compositor to a viewer when backdrop is active crashes Blender

Exact steps for others to reproduce the error
Connect the alpha output of the movie clip node to the viewer node in the attached file.
segfault.blend

Additional

Ran Git Bisect between 2.73a master, revealed broken by commit 35d3b6316b
Full bisect report: http://www.pasteall.org/57188

GDB backtrace http://www.pasteall.org/57186

pasteall link to file: http://www.pasteall.org/blend/34977

Many thanks

**System Information** Linux mint 17.1 AMD Phenom II x6 1090t 16GB RAM GTX 970 **Blender Version** Broken: Master / testbuild1 ed5df50 Worked: 2.73a **Short description of error** Connecting alpha output of movie clip node in the compositor to a viewer when backdrop is active crashes Blender **Exact steps for others to reproduce the error** Connect the alpha output of the movie clip node to the viewer node in the attached file. [segfault.blend](https://archive.blender.org/developer/F150157/segfault.blend) **Additional** Ran Git Bisect between 2.73a master, revealed broken by commit 35d3b6316b21ad9ae7eb96a7a541c4051eae3441 Full bisect report: http://www.pasteall.org/57188 GDB backtrace http://www.pasteall.org/57186 pasteall link to file: http://www.pasteall.org/blend/34977 Many thanks
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @OliverBurn

Added subscriber: @OliverBurn
Sergey Sharybin self-assigned this 2015-03-12 13:17:05 +01:00

Will commit fix once git is open.

Will commit fix once git is open.

This issue was referenced by c4b3b60aad

This issue was referenced by c4b3b60aad315b5060229429cef6ff3bffa0f33c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit c4b3b60aad.

Closed by commit c4b3b60aad.

This issue was referenced by 651689fc62

This issue was referenced by 651689fc62809e3bf8c57ba9fb138456acecd96d
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43974
No description provided.