Fix T43974: Alpha output of movie clip node crashes blender

Issue was caused by a bug in the memory optimization commit,
should be backported to the final release branch.